script changed to node

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "mern-memories-project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ."
+    "start": "node ."
   },
   "author": "Akbarjon Ahmadjonov",
   "license": "MIT",
