--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 heroku config:set
 
-CONNECTION_URL = "mongodb+srv://fotismenos:fotismenos007@cluster0.qy6uw.mongodb.net/?retryWrites=true&w=majority"
+CONNECTION_URL = "mongodb+srv://fotismenos007:Fotismenos3141@cluster0.yogexjw.mongodb.net/?appName=Cluster0"
